# Hungry-Spider

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: targets.yaml  test_targets.yaml
config/extraction_schemas/: ecommerce.yaml  generic.yaml
spider/: __init__.py  cli.py
spider/ai/: __init__.py  anthropic_client.py  extractor.py  ollama_client.py  openai_client.py  provider.py  retrying.py  schemas.py
spider/antidetect/: __init__.py  behaviour.py  header_factory.py  proxy_manager.py  useragent_rotator.py
spider/core/: __init__.py  engine.py  queue_manager.py  session.py
spider/crawlers/: __init__.py
spider/crawlers/playwright_crawler/: __init__.py  browser_manager.py  dynamic_spider.py
spider/crawlers/scrapy_crawler/: __init__.py  middlewares.py  pipelines.py  runner.py  settings.py
spider/crawlers/scrapy_crawler/spiders/: __init__.py  base_spider.py  generic_spider.py
spider/parsers/: __init__.py  html_cleaner.py  text_extractor.py
spider/storage/: __init__.py  db.py  exporter.py  models.py  repository.py
spider/utils/: config.py  logger.py  validators.py
tests/: test_ai.py  test_antidetect.py  test_crawlers.py  test_storage.py
